ubiquity (2.21.45) UNRELEASED; urgency=medium

  * Rework the accessibility profile code to use the accessibility profile
    manager if available

 -- Luke Yelavich <themuso@ubuntu.com>  Wed, 17 Feb 2016 17:59:29 +1100

ubiquity (2.21.44) xenial; urgency=medium

  [ Iain Lane ]
  * Port the slideshow screen to WebKit 2 (LP: #1469221)
  * Automatic update of included source packages: apt-setup
    1:0.104ubuntu3, bterm-unifont 1.4, choose-mirror 2.65ubuntu4, flash-
    kernel 3.0~rc.4ubuntu58, partconf 1.49, partman-basicmethods 61,
    partman-lvm 112, partman-newworld 34, partman-xfs 58.

  [ Mathieu Trudel-Lapierre ]
  * Automatic update of included source packages: apt-setup 1:0.104ubuntu4,
    choose-mirror 2.65ubuntu5, flash-kernel 3.0~rc.4ubuntu62,
    partman-partitioning 110ubuntu3, partman-jfs 47.
  * Redesign the prepare screen for less clutter.
  * Unbreak the Kubuntu installer with respect to Secure Boot.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Tue, 16 Feb 2016 06:10:51 -0500

ubiquity (2.21.43) xenial; urgency=medium

  * ubiquity/install_misc.py: be extra careful retrieving the state of the
    SecureBoot variable the system if booted in EFI, to avoid invalid data.
    (LP: #1531779)
  * Automatic update of included source packages: base-installer
    1.158ubuntu2, console-setup 1.108ubuntu10.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Tue, 26 Jan 2016 19:23:41 -0500

ubiquity (2.21.42) xenial; urgency=medium

  * Automatic update of included source packages: grub-installer
    1.128ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 04 Jan 2016 16:27:15 +0000

ubiquity (2.21.41) xenial; urgency=medium

  * Pass "-term linux" when running setterm from start-ubiquity-dm, as
    without TERM set it otherwise refuses to do anything.
  * Set "Before=plymouth-quit.service plymouth-quit-wait.service" in
    ubiquity.service, so that plymouth isn't told to quit while we're busy
    starting up on its VT (LP: #1527353).